exports[`test No options - spec 1`] = `
"<div class=
\"pe-notification pe-dark-tone pe-notification--horizontal\">
  <div class=\"pe-notification__content\"></div>
</div>
"
`;

exports[`test Option: class - spec 1`] = `
"<div class=
\"pe-notification pe-dark-tone pe-notification--horizontal class-x\">
  <div class=\"pe-notification__content\"></div>
</div>
"
`;

exports[`test Option: className - spec 1`] = `
"<div class=
\"pe-notification pe-dark-tone pe-notification--horizontal className-x\">
<div class=\"pe-notification__content\"></div>
</div>
"
`;

exports[`test Option: element - spec 1`] = `
"<a class=
\"pe-notification pe-dark-tone pe-notification--horizontal\">
<div class=\"pe-notification__content\"></div></a>
"
`;

exports[`test Option: id - spec 1`] = `
"<div id=\"id-x\" class=
\"pe-notification pe-dark-tone pe-notification--horizontal\">
  <div class=\"pe-notification__content\"></div>
</div>
"
`;
